# os

./: Cargo.toml  readme.md  run.sh
.cargo/: config  config.toml
src/: boot.s  main.rs  uart.rs  virt.lds
src/asm/: boot.s
src/drivers/: mod.rs  uart.rs
src/drivers/gpu/: mod.rs  virtio.rs
src/kernel/: kernal.rs  mod.rs
src/kernel/devices/: mod.rs
src/kernel/memory/: mod.rs
src/kernel/memory/allocator/: buddy.rs  global.rs  heap.rs  mod.rs
src/kernel/memory/paging/: mod.rs
src/kernel/process/: mod.rs
src/lds/: virt.lds
src/memory/: mod.rs  page.rs  page_table_entry.rs
src/memory/allocator/: global.rs
src/memory/page/: page_system.rs  page_table_entry.rs
src/memory/virtual/: virt.rs  virt_address.rs
src/process/: mod.rs
src/utils/: mod.rs  panic.rs  print.rs  welcome.rs
