[package]
name = "os"
version = "0.1.0"
edition = "2021"

# This should be in profile section, not package
# opt-level = 3

[features]
default = []
debug = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
spin = "0.9.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
